# beeziptoo

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
cli/: Cargo.toml  README.md
cli/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: compress.rs  decompress.rs
src/: burrows_wheeler.rs  file_format.rs  huffman.rs  lib.rs  move_to_front.rs
src/file_format/: bitstream.rs
tests/: beeziptoo.rs
