[package]
name = "beeziptoo"
version = "0.0.0"
authors = ["Andrew Halle <me@andrewhalle.dev>", "Randy Barlow <randy@electronsweatshop.com>"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/bowlofeggs/beeziptoo"
documentation = "https://docs.rs/beeziptoo"
description = "We can do bzip, too"
keywords = ["bzip2"]
categories = ["algorithms", "compression"]
edition = "2021"
rust-version = "1.89"

[dependencies]
thiserror = "1"

[workspace]
members = ["cli"]
